--- a/comp/sass/second/_base.scss
+++ b/comp/sass/second/_base.scss
@@ -22,20 +22,25 @@
     display: flex;
     h1{
       display: flex;
-      padding-right: 50px;
+      padding:0 50px 0 10px;
       width: 100%;
+      height: 50px;
     }
   }
   &_headerTitle{
-    flex: 4;
+    flex: 1;
     position: relative;
     img{
       width: 90%;
       position: absolute;
-      bottom: 0;
+      bottom: 3px;
       left: 0;
     }
   }
+}
+
+.secondBase_headerImg {
+  width: 80px;
 }
 
 .goTop {
