nav野中作業完了

--- a/comp/sass/base/_contentsArea.scss
+++ b/comp/sass/base/_contentsArea.scss
@@ -40,7 +40,7 @@
     &.commingsoon:before {background-image: url("http://placehold.jp/10/eb1730/ffffff/40x40.png?text=%E3%81%8B%E3%81%BF%E3%81%99");}
   }
   &__title{
-    color: $primary__green;
+    color: $base__white;
     font-weight: 700;
     font-size: 24px;
     margin: auto;
