--- a/comp/sass/base/_base.scss
+++ b/comp/sass/base/_base.scss
@@ -206,3 +206,27 @@ section {
     }
   }
 }
+
+.deviceSP {display: block;}
+.devicePC {display: none;}
+.secondBase_fes_2018.deviceSP {display: flex;}
+.secondBase_fes_2018.devicePC {display: none;}
+@media screen and (min-width: 751px) {
+  .deviceSP {display: none;}
+  .devicePC {display: block;}
+
+  .container {
+    width: 100%;}
+  .secondBase_fes_2018 h1 {
+    width: auto;
+  }
+}
+
+section.news {
+  text-align: center;
+}
+
+@media screen and (min-width: 751px) {
+  .secondBase_fes_2018.deviceSP {display: none;}
+  .secondBase_fes_2018.devicePC {display: flex;}
+}
