--- a/comp/sass/base/_header.scss
+++ b/comp/sass/base/_header.scss
@@ -24,13 +24,14 @@ header {
     left: 0;
     right: 0;
     top: -100%;
-    padding: 24px;
+    padding: 50px 0 0px;
     margin: auto;
     width: 100%;
     background: #ccc;
     z-index: 10;
     transition: all 300ms 0s ease;
     height: 100%;
+    overflow-y: scroll;
     &.js-menuNav__active {
       display: block;
       top: 0;
