--- a/comp/sass/base/_header.scss
+++ b/comp/sass/base/_header.scss
@@ -76,6 +76,48 @@ header {
   }
 }
 
+nav.deviceSP {
+  background-color: #e4007f;
+  ul {
+  li {
+    border-top: 1px solid rgba(238, 238, 238, 0.4);
+    border-bottom: rgba(238, 238, 238, 0.4);
+    text-align: center;
+    a {
+    color: #FFF;
+    display: block;
+    }
+    &__title {
+      width: 130px;
+      margin: auto;
+      padding: 14px 0px 8px 0px;
+    span {
+        font-size: 10px;
+    }
+    }
+  }
+  }
+  .navigation__Contents{
+    display: flex;
+    flex-flow: row wrap;
+    ul{
+    display: flex;
+    flex-flow: row wrap;
+    }
+   li {
+    width: 50%;
+    border: none;
+    height: 50px;
+    font-size: 14px;
+    img {
+      width: 12px;
+      height: 12px;
+      margin-right: 5px;
+    }
+  }
+  }
+}
+
 
 
 .headerBtn__open.js-headerBtn__action span:first-child {animation: menu-bar02 .75s forwards;}
