--- a/comp/sass/base/_header.scss
+++ b/comp/sass/base/_header.scss
@@ -28,7 +28,7 @@ header {
     margin: auto;
     width: 100%;
     background: #ccc;
-    z-index: 10;
+    z-index: 30;
     transition: all 300ms 0s ease;
     height: 100%;
     overflow-y: scroll;
@@ -79,42 +79,59 @@ header {
 nav.deviceSP {
   background-color: #e4007f;
   ul {
-  li {
-    border-top: 1px solid rgba(238, 238, 238, 0.4);
-    border-bottom: rgba(238, 238, 238, 0.4);
-    text-align: center;
-    a {
-    color: #FFF;
-    display: block;
+    li {
+      border-top: 1px solid rgba(238, 238, 238, 0.4);
+      border-bottom: rgba(238, 238, 238, 0.4);
+      text-align: center;
+      a {
+        color: #FFF;
+        display: block;
+      }
     }
-    &__title {
-      width: 130px;
-      margin: auto;
-      padding: 14px 0px 8px 0px;
+  }
+  .deviceSP__title {
+    width: 130px;
+    margin: auto;
+    padding: 14px 0px 8px 0px;
     span {
         font-size: 10px;
     }
-    }
   }
-  }
-  .navigation__Contents{
+  .navigation__Contents {
     display: flex;
     flex-flow: row wrap;
-    ul{
-    display: flex;
-    flex-flow: row wrap;
+    ul {
+      display: flex;
+      flex-flow: row wrap;
     }
-   li {
-    width: 50%;
-    border: none;
-    height: 50px;
-    font-size: 14px;
-    img {
-      width: 12px;
-      height: 12px;
-      margin-right: 5px;
+    li {
+      width: 50%;
+      border: none;
+      height: 50px;
+      font-size: 14px;
+      &:nth-of-type(odd) a {padding-left: 32px;}
+      a {
+        display: flex;
+        align-items: center;
+        height: 50px;
+        padding-left: 12px;
+      }
+      img {
+        width: 12px;
+        height: 12px;
+        margin-right: 5px;
+      }
     }
   }
+  ul.navigation__snsArea {
+    width: 280px;
+    display: flex;
+    justify-content: space-between;
+    margin: 0 auto;
+    padding: 24px 0;
+    li {
+      width: 35px;
+    }
   }
 }
 
