--- a/comp/sass/base/_contentsArea.scss
+++ b/comp/sass/base/_contentsArea.scss
@@ -78,8 +78,17 @@
       right: 0;
       margin: auto;
     }
+    }
   }
 
+  @media screen and (max-width: 320px) {
+    &__description{
+      font-size: 14px;
+    }
+    &__comment{
+      font-size: 10px;
+      padding: 12px 4px;
+    }
   }
 
 }
