--- a/comp/sass/base/_eventReport.scss
+++ b/comp/sass/base/_eventReport.scss
@@ -59,7 +59,15 @@
   }
 
 
-
+  @media screen and (max-width: 374px) {
+    &__report a {
+      font-size: 0.8em;
+      padding: 0.6em 0.6em 0.6em 2.5em;
+  }
+  &__report::before {
+    left: 1em;
+  }
+  }
 
 
 
