--- a/comp/sass/second/_base.scss
+++ b/comp/sass/second/_base.scss
@@ -31,6 +31,7 @@
     position: relative;
     img {
       width: 90%;
+      max-width: 210px;
       position: absolute;
       bottom: 3px;
       left: 0;
