--- a/comp/sass/style.scss
+++ b/comp/sass/style.scss
@@ -17,7 +17,7 @@
 @import "second/_attentionArea";
 
 @import "pc/_base";
-@import "pc/_top";
+@import "pc/_topBottom";
 @import "pc/_contentsArea";
 @import "pc/_reflectionArea";
 @import "pc/_eventReport";
