--- a/comp/sass/base/_header.scss
+++ b/comp/sass/base/_header.scss
@@ -128,7 +128,7 @@ nav.deviceSP {
       padding: 6px;
       font-size: 12px;
       letter-spacing: 0.9px;
-  }
+    }
   }
 
 
@@ -188,6 +188,7 @@ nav.deviceSP {
   width: 100%;
   background-color: #ffffff;
   height: 80px;
+  border-bottom: 1px solid #eee;
   > div {
       display: flex;
       width: 100%;
@@ -200,14 +201,12 @@ nav.deviceSP {
       nav {
         position: initial;
         padding: 0;
+        overflow: visible;
         ul {
           display: flex;
         }
       }
     }
-  }
-  .secondBase_headerImg {
-    width: 126px;
   }
   .devicePC__title {
     display: flex;
@@ -215,12 +214,17 @@ nav.deviceSP {
     align-items: center;
     flex-direction: column;
     height: 80px;
+    padding-top: 21px;
+    position: relative;
+    z-index: 10;
+    background-color: #fff;
     > img {
-      height: 16px;
-      width: auto;
+      width: 100%;
     }
     > span {
       font-size: 10px;
+      color: #1e0111;
+      display: none;
     }
   }
   .navigation__Contents {
@@ -229,14 +233,65 @@ nav.deviceSP {
     }
     li {
       width: 100%;
+      &:first-child a {border-top: 0;}
     }
     a {
       display: flex;
       align-items: center;
+      font-size: 14px;
+      color: $secondary__pink;
+      border-top: 1px solid $secondary__pink;
+      height: 40px;
+      padding-left: 6px;
+      width: 170px;
       > img {
         width: 12px;
         height: 12px;
+        margin-right: 6px;
+      }
+    }
+  }
+  .devicePC > ul > li {
+    position: relative;
+    z-index: 60;
+    &:nth-of-type(1) {flex: 1.3;}
+    &:nth-of-type(2) {flex: 1.1;}
+    &:nth-of-type(3) {flex: 0.9;}
+    &:nth-of-type(4) {flex: 0.9;}
+    &:nth-of-type(5) {flex: 1.3;}
+    &:nth-of-type(6) {flex: 1.2;}
+    &:nth-of-type(7) {flex: 1.5;}
+    &:nth-of-type(8) {flex: 1.5;}
+    &:nth-of-type(9) {flex: 1;}
+    .navigation__Contents {
+      position: absolute;
+      top: 80px;
+      left: 0;
+      transform: translateY(-100%);
+      transition: 0.3s;
+      z-index: 1;
+      border: 1px solid $secondary__pink;
+      border-top: 1px solid #eee;
+      background-color: #fff;
+    }
+    &:nth-of-type(7) .navigation__Contents {
+      width: 260px;
+      .navigation__Contents__Description {
+        color: #1e0111;
+        font-size: 11px;
+        padding: 11px 0 0px 6px;
+      }
+      li {
+        // border-top: 0;
+        a {
+          width: 100%;
+          border: 0;
+        }
+      }
+      li:nth-of-type(2) a:last-child {
+        border-bottom: 1px solid $secondary__pink;
       }
     }
   }
 }
+
