--- a/comp/sass/pc/_contentsArea.scss
+++ b/comp/sass/pc/_contentsArea.scss
@@ -6,8 +6,11 @@
     height: 100px;
     position: absolute;
     top: 0px;
-    right: 0%;
-    }
+    right: 170px;
+   img {
+    width: 100%;
+  }
+  }
     ul{
       display: flex;
       flex-wrap: wrap;
