--- a/comp/sass/pc/_eventReport.scss
+++ b/comp/sass/pc/_eventReport.scss
@@ -7,17 +7,29 @@
   &__report {
     display: flex;
     flex-direction: column;
-    width: 100%;
     border:none;
+    flex: 1;
+    a{
+      padding-left: 40px;
+    &:nth-child(1) {
+      padding-top: 12px;
+      background-position: 16px 28px;
+    }
+    &:nth-child(2) {
+      padding-bottom: 12px;
+      background-position: 16px 15px;
+    }
+    }
   }
   &__img{
     border:none;
+    width: 190px;
   }
   ul {
     width: 840px;
     margin: auto;
     padding: 20px 0px;
-  li {border: solid 1.4px #979797;}
+  li {border: solid 1px #979797;}
   }
   a {
     height: 50%;
