--- a/comp/sass/base/_footer.scss
+++ b/comp/sass/base/_footer.scss
@@ -1,6 +1,7 @@
 footer {
   text-align: center;
   background: #f4f4f4;
+  margin-bottom: 70px;
   h4 {
     max-width: 686px;
     font-size: 18px;
