--- a/comp/sass/base/_header.scss
+++ b/comp/sass/base/_header.scss
@@ -254,6 +254,7 @@ nav.deviceSP {
   .devicePC > ul > li {
     position: relative;
     z-index: 60;
+    background-color: #fff;
     &:nth-of-type(1) {flex: 1.3;}
     &:nth-of-type(2) {flex: 1.1;}
     &:nth-of-type(3) {flex: 0.9;}
