--- a/comp/sass/base/_header.scss
+++ b/comp/sass/base/_header.scss
@@ -183,13 +183,14 @@ nav.deviceSP {
 }
 
 @media screen and (min-width: 751px) {
-.secondBase_fes_2018.devicePC {
-  display: block;
-  width: 100%;
-  background-color: #ffffff;
-  height: 80px;
-  border-bottom: 1px solid #eee;
-  > div {
+  .breadcrumb {display: none;}
+  .secondBase_fes_2018.devicePC {
+    display: block;
+    width: 100%;
+    background-color: #ffffff;
+    height: 80px;
+    border-bottom: 1px solid #eee;
+    > div {
       display: flex;
       width: 100%;
       max-width: 1200px;
