--- a/comp/sass/base/_base.scss
+++ b/comp/sass/base/_base.scss
@@ -23,12 +23,7 @@ body {
   -webkit-font-smoothing: antialiased;
   background-color: #f4f4f4;
 }
-a {
-  display: block;
-  &:hover {
-    opacity: 0.5;
-  }
-}
+
 img {
   vertical-align: top;
   width: 100%;
@@ -223,6 +218,9 @@ section {
   .container {
     width: 100%;
     padding-bottom: 35px;}
+  footer.container {
+    padding-bottom: 70px;
+  }
   .secondBase_fes_2018 h1 {
     width: auto;
   }
@@ -244,9 +242,127 @@ section {
 
 section.news {
   text-align: center;
+  @media screen and (max-width: 750px){
+    padding-top: 24px;
+  }
+}
+@media screen and (max-width: 750px){
+  section.news {
+    padding-top: 24px;
+  }
 }
 
 @media screen and (min-width: 751px) {
   .secondBase_fes_2018.deviceSP {display: none;}
   .secondBase_fes_2018.devicePC {display: flex;}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.rg-Privilege {
+  border-radius: 4px;
+  background-color: #f5f8ec;
+  border: 1px solid #8cc63f;
+  position: relative;
+  margin: 32px auto 24px;
+  padding: 32px 0 20px;
+  color: #1e0111;
+}
+
+.rg-Privilege>h3 {
+  position: absolute;
+  margin: 0 auto;
+  font-size: 1.6rem;
+  width: 200px;
+  top: -12px;
+  background: -webkit-gradient(linear,left top,left bottom,from(#fff),color-stop(50%,#fff),color-stop(50%,#f5f8ec));
+  background: -webkit-linear-gradient(top,#fff,#fff 50%,#f5f8ec 0);
+  background: linear-gradient(180deg,#fff 0,#fff 50%,#f5f8ec 0);
+  left: 0;
+  right: 0;
+  text-align: center
+}
+
+.rg-Privilege>ul {
+  list-style: none;
+  margin: auto;
+  padding: 0;
+  width: 250px
+}
+
+.rg-Privilege>ul>li {
+  letter-spacing: .7px;
+  position: relative;
+  padding-left: 12px;
+  font-size: 1.3rem
+}
+
+.rg-Privilege>ul>li+li {
+  margin-top: 16px
+}
+
+.rg-Privilege>ul>li:before {
+  content: "";
+  width: 6px;
+  height: 6px;
+  background: #e4007f;
+  border-radius: 6px;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  position: absolute
+}
+.ct-MAP__btn a {
+  width: 100%;
+  max-width: 374px;
+  margin: auto;
+}
+@media screen and (min-width: 751px) {
+  .campaignArea__contents {
+    width: 100%;
+    max-width: 600px;
+    margin: 0 auto;
+  }
+  .rg-Privilege>h3 {
+    width: 50%;
+    font-size: 21px;
+    top: -18px;
+  }
+  .rg-Privilege>ul {
+    padding: 0;
+    width: 59%;
+  }
+  .rg-Privilege>ul>li {
+    font-size: 20px;
+  }
+  .campaignArea {
+    .scheduleArea__registrationArea__btn {
+      font-size: 30px;
+      height: 70px;
+      padding-top: 6px;
+      line-height: 1.3;
+    }
+    .scheduleArea__registrationArea__btn span {
+      font-size: 15px;
+    }
+  }
+}
+
+
+@media screen and (min-width: 751px) {
+  section.pattern_01 {
+    padding-bottom: 1px;
+  }
 }
