--- a/comp/sass/pc/_topBottom.scss
+++ b/comp/sass/pc/_topBottom.scss
@@ -12,6 +12,7 @@
   background-color: #fff;
   padding: 20px 0;
   text-align: center;
+  border-top: 1px solid #f4f4f4;
   a {
     color: $secondary__pink;
     font-size: 18px;
