--- a/comp/sass/base/_contentsArea.scss
+++ b/comp/sass/base/_contentsArea.scss
@@ -2,6 +2,10 @@
   text-align: center;
   a{
     display:block;
+    border-radius: 30px;
+    box-shadow: 1px 3px 0 0px #eeeeee;
+    border: 1px solid #d7d7d7;
+    overflow: hidden;
   }
   li {
     margin-bottom: 2em;
@@ -25,7 +29,7 @@
   &__image{
     position:relative;
     img {
-      border-radius: 30px 30px 0px 0px;
+
     }
     &:before{
       content: "";
@@ -53,10 +57,12 @@
     font-size: 13px;
     letter-spacing: 1px;
     font-weight: 700;
-    border-radius: 0px 0px 30px 30px;
-    box-shadow: 1px 3px 0 0 #eeeeee;
     background-color: $base__white;
     padding: 1em;
+    @media screen and (min-width: 751px) {
+      font-size: 14px;
+      padding: 0 2px;
+    }
   span{
     display:block;
     color: $positiveColor__01;
