--- a/comp/sass/pc/_footer.scss
+++ b/comp/sass/pc/_footer.scss
@@ -15,14 +15,15 @@
 }
 
 .footer__followUsIcon {
-  width: 100%;
   padding: 0;
   margin-right: 70px;
+  flex: 1;
 }
 
 .footer__links {
   overflow: hidden;
   padding: 0;
+  flex: 2;
   > div {
     width: 48%;
     float: left;
@@ -34,6 +35,7 @@
     li a {
       display: flex;
       height: 44px;
+      margin-bottom: 10px;
       img {
         object-fit: inherit;
         width: 100%;
@@ -63,7 +65,11 @@
     max-width: 1200px;
     margin: auto;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+    padding: 0 16px;
+    @media screen and (max-width: 750px) {
+      justify-content: center;
+    }
     align-items: center;
     height: 70px;
     p {
@@ -73,6 +79,7 @@
       span {
         font-size: 14px;
         font-weight: 100;
+        color: #e4007e;
       }
     }
   }
@@ -86,20 +93,39 @@
     background-color: #8cc63f;
     box-shadow: 0 2px 0 0 #70a22f;
     color: #fff;
+    flex-direction: column;
+    line-height: 1.3;
+    font-weight: 700;
+    span {font-size: 10px;font-weight: 700;}
   }
 }
-@media screen and (max-width: 749px) {
+@media screen and (max-width: 750px) {
   .footerRegister {
-    background-color: #1e0111;
+    background-color: rgba(30, 1, 17, 0.6);
     border-top: 0;
     z-index: 29;
+    transform: translateY(100%);
+    transition: 0.3s;
+    &.active {
+      transform: translateY(0%);
+    }
     a {
-      max-width: 300px;
-      width: 90%;
+      width: 100%;
       font-size: 17px;
+      height: 48px;
     }
   }
 
-  
+}
 
+@media screen and (min-width: 751px) {
+  .footer__comment p {
+    font-size: 14px;
+  }
+  footer .footer__contents__top h4 {
+    width: 100%;
+    max-width: 68px;
+    text-align: center;
+    margin: 0 auto 18px 0;
+  }
 }
