--- a/comp/sass/base/_reflectionArea.scss
+++ b/comp/sass/base/_reflectionArea.scss
@@ -1,4 +1,4 @@
-.reflectionArea {
+.reflectionArea {padding-bottom: 21px;
   &__movie{
     position: relative;
     overflow: hidden;
@@ -28,7 +28,7 @@
   video::-internal-media-controls-download-button {
     display:none;
   }
-
+  
   video::-webkit-media-controls-enclosure {
     overflow:hidden;
   }
@@ -36,12 +36,6 @@
   video::-webkit-media-controls-panel {
     width: calc(100% + 30px); /* Adjust as needed */
   }
-
-
-
-
-
-
 
 }
 
