--- a/comp/sass/base/_footer.scss
+++ b/comp/sass/base/_footer.scss
@@ -66,4 +66,52 @@ footer {
   }
 }
 
+.footerRegister {
+  width: 100%;
+  background-color: #f8f6f8;
+  border-top: 1px solid #d8d7d8;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  z-index: 100;
+  > div {
+    width: 100%;
+    max-width: 1200px;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    padding: 0 16px;
+    @media screen and (max-width: 750px) {
+      justify-content: center;
+    }
+    align-items: center;
+    height: 70px;
+    p {
+      color: #585858;
+      font-weight: 700;
+      font-size: 18px;
+      span {
+        font-size: 14px;
+        font-weight: 100;
+        color: #e4007e;
+      }
+    }
+  }
+  a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 300px;
+    height: 45px;
+    border-radius: 3px;
+    background-color: #8cc63f;
+    box-shadow: 0 2px 0 0 #70a22f;
+    color: #fff;
+    flex-direction: column;
+    line-height: 1.3;
+    font-weight: 700;
+    span {font-size: 10px;font-weight: 700;}
+  }
+}
+
 //これがfooterの閉じタグ！
