--- a/comp/sass/style.scss
+++ b/comp/sass/style.scss
@@ -15,6 +15,7 @@
 
 @import "second/_base";
 @import "second/_attentionArea";
+@import "second/_attractionArea";
 
 @import "pc/_base";
 @import "pc/_topBottom";
