--- a/comp/sass/second/_base.scss
+++ b/comp/sass/second/_base.scss
@@ -67,6 +67,77 @@
   }
 }
 
+.secondArea__switchBtn{
+  ul {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    li {
+      width: 167px;
+      margin-bottom: 9px;
+    a img {
+        width: 100%;
+    }
+    }
+  }
+  &__modalContent {
+    position:fixed;
+    display:none;
+    z-index:2;
+    width:90%;
+    margin:0;
+    border: solid 2px #e4007f;
+    background:#fff;
+    .modal-close {
+      position: absolute;
+      top: -16px;
+      right: -16px;
+      width: 40px;
+      height: 40px;
+      line-height: 100px;
+      text-align: center;
+      display: inline-block;
+      border-radius: 50%;
+      background: #e4007f;
+      border: 2px solid #FFF;
+      &:before {
+        content: "";
+        width: 3px;
+        height: 30px;
+        background: #FFF;
+        transform: rotate(45deg);
+        display: inline-block;
+        top: 3px;
+        right: 17px;
+        position: absolute;
+        text-align: center;
+      }
+      &:after {
+        content: "";
+        width: 3px;
+        height: 30px;
+        background: #FFF;
+        transform: rotate(-45deg);
+        display: inline-block;
+        top: 3px;
+        right: 17px;
+        position: absolute;
+      }
+    }
+  }
+}
+
+.modal-overlay {
+  z-index:1;
+  display:none;
+  position:fixed;
+  top:0;
+  left:0;
+  width:100%;
+  height:120%;
+  background-color:rgba(0,0,0,0.3);
+  }
+
 
 
 
