stageページ作成しました

--- a/comp/sass/style.scss
+++ b/comp/sass/style.scss
@@ -16,6 +16,7 @@
 @import "second/_base";
 @import "second/_attentionArea";
 @import "second/_attractionArea";
+@import "second/_stage";
 
 @import "pc/_base";
 @import "pc/_topBottom";
