--- a/comp/sass/style.scss
+++ b/comp/sass/style.scss
@@ -17,6 +17,7 @@
 @import "second/_attentionArea";
 @import "second/_attractionArea";
 @import "second/_stage";
+@import "second/_wordshopTable";
 
 @import "pc/_base";
 @import "pc/_topBottom";
