--- a/comp/sass/second/_base.scss
+++ b/comp/sass/second/_base.scss
@@ -158,3 +158,20 @@ section.fes_2018_1130 > h3 {
     margin-bottom: 16px;
   }
 }
+
+
+.ct-MemberList__Date {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  margin: 16px auto;
+  width: 280px;
+}
+li.stage__fes2018.sw-Tab {
+  padding: 0;
+  margin-right: 11px;
+  &:last-child {
+    margin-right: 0;
+  }
+}
