workshopDetailを変更しました

--- a/comp/sass/style.scss
+++ b/comp/sass/style.scss
@@ -17,7 +17,8 @@
 @import "second/_attentionArea";
 @import "second/_attractionArea";
 @import "second/_stage";
-@import "second/_wordshopTable";
+@import "second/_workshopTable";
+@import "second/_workshopDetail";
 
 @import "pc/_base";
 @import "pc/_topBottom";
