--- a/comp/sass/style.scss
+++ b/comp/sass/style.scss
@@ -19,6 +19,9 @@
 @import "second/_stage";
 @import "second/_workshopTable";
 @import "second/_workshopDetail";
+@import "second/_foodDrinkArea";
+
+
 
 @import "pc/_base";
 @import "pc/_topBottom";
