--- a/comp/sass/base/_header.scss
+++ b/comp/sass/base/_header.scss
@@ -206,7 +206,7 @@ nav.deviceSP {
       }
       nav {
         position: initial;
-        padding: 0;
+        padding: 0 0 0 130px;
         overflow: visible;
         ul {
           display: flex;
