--- a/comp/sass/second/_foodDrinkArea.scss
+++ b/comp/sass/second/_foodDrinkArea.scss
@@ -8,6 +8,7 @@
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
+    padding: 16px;
     li {
       width: 49%;
       border: solid 1px #e4007f;
@@ -42,8 +43,10 @@
   &__menu ul li {
     display: flex;
     align-items: center;
-    padding: 0.81em 1.25em 0.81em 0.8em;
+    padding: 0.81em 1.25em 0.81em 0.81em;
     border-bottom: 1px solid #dcdcdc;
+    margin-right: -16px;
+    margin-left: -16px;
     &:after {
       content: "";
       width: 12px;
@@ -52,32 +55,35 @@
       border-right: solid 2px #8cc63f;
       transform: rotate(45deg);
       position: absolute;
-      right: 23px;
+      right: 1em;
     }
     img {
       width: 126px;
       height: 76px;
       margin-right: 10px;
     }
-    &__menuDetail div {
+  }
+  &__menuDetail{
+  padding-right: 1.13em;
+     div {
       font-size: 14px;
       font-weight: bold;
       color: #1e0111;
     }
-    &__menuDetail span:first-child {
+  }
+  &__menuDetail span:first-child {
       font-size: 9px;
       color: $secondary__pink;
       font-weight: bold;
-    }
-    &__menuDetail span:last-child {
+  }
+  &__menuDetail span:last-child {
       color: #8cc63f;
       font-size: 14px;
       font-weight: bold;
-    }
   }
   &__placeMap p {
     padding: 0px 20px;
-}
+  }
 }
 
 .foodsArea{
@@ -88,11 +94,10 @@
   &__map {
     margin-right: -16px;
     margin-left: -16px;
-    padding: 16px;
     background-color: #f8f8f8;
   }
   &__placeMap {
     margin-top: 32px;
-}
-}
+  }
+  }
 }
