attractionDetail作成しました

--- a/comp/sass/style.scss
+++ b/comp/sass/style.scss
@@ -20,6 +20,9 @@
 @import "second/_workshopTable";
 @import "second/_workshopDetail";
 @import "second/_foodDrinkArea";
+@import "second/_attractionDetail";
+
+
 
 
 
