--- a/comp/sass/base/_header.scss
+++ b/comp/sass/base/_header.scss
@@ -206,7 +206,7 @@ nav.deviceSP {
       }
       nav {
         position: initial;
-        padding: 0 0 0 130px;
+        padding: 0 0 0 80px;
         overflow: visible;
         ul {
           display: flex;
@@ -312,13 +312,13 @@ nav.deviceSP {
 
 
 .secondBase_fes_2018.deviceSP > nav > ul > li {
-  &:nth-of-type(3), &:nth-of-type(8) {
+  &:nth-of-type(3) {
     display: none;
   }
 }
 
 .secondBase_fes_2018.devicePC nav > ul > li {
-  &:nth-of-type(3), &:nth-of-type(9) {
+  &:nth-of-type(3) {
     display: none;
   }
 }
