foodsAttraction細々修正しました

--- a/comp/sass/second/_attractionArea.scss
+++ b/comp/sass/second/_attractionArea.scss
@@ -24,7 +24,7 @@
   line-height: 1;
   margin-bottom: 12px;
   }
-  &__menu ul li {
+  &__menu ul li a{
     display: flex;
     align-items: center;
     padding: 0.81em;
