foodDetailPC作成中です。一旦マージ

--- a/comp/sass/second/_foodsDetail.scss
+++ b/comp/sass/second/_foodsDetail.scss
@@ -1,6 +1,10 @@
 .foodsDetail{
+    &__detail {
+    padding: 1px 0px;
+    }
     &__shopLogo {
       width: 28%;
+      margin: 10px auto;
     }
     &__foodsTitle {
       color: #1e0111;
