--- a/comp/sass/style.scss
+++ b/comp/sass/style.scss
@@ -33,7 +33,8 @@
 @import "pc/_reflectionArea";
 @import "pc/_eventReport";
 @import "pc/_footer";
-@import "pc/_foodDrinkArea";
+@import "pc/_foods";
+@import "pc/_foodsDetail";
 
 
 
