--- a/comp/sass/style.scss
+++ b/comp/sass/style.scss
@@ -22,12 +22,14 @@
 @import "second/_foods";
 @import "second/_attractionDetail";
 @import "second/_foodsDetail";
-
+@import "second/_foodDrinkArea";
+@import "second/_attractionDetail";
 
 
 
 
 @import "pc/_base";
+@import "pc/_top";
 @import "pc/_topBottom";
 @import "pc/_contentsArea";
 @import "pc/_reflectionArea";
