--- a/comp/sass/style.scss
+++ b/comp/sass/style.scss
@@ -20,10 +20,12 @@
 @import "second/_workshopTable";
 @import "second/_workshopDetail";
 @import "second/_foods";
-@import "second/_attractionDetail";
 @import "second/_foodsDetail";
 @import "second/_foodDrinkArea";
 @import "second/_attractionDetail";
+@import "second/_goodsArea";
+@import "second/_goodsDetail";
+@import "second/_diaryArea";
 
 
 
