foodsDetail作成しましたとりあえず終わった。。かな？2

--- a/comp/sass/second/_foodsDetail.scss
+++ b/comp/sass/second/_foodsDetail.scss
@@ -51,6 +51,7 @@
         font-size: 13px;
         font-weight: bold;
         position: relative;
+        text-align: right;
       &:after {
           content: "";
           width: 8px;
