--- a/comp/sass/pc/_foodsDetail.scss
+++ b/comp/sass/pc/_foodsDetail.scss
@@ -22,7 +22,20 @@
     width: 62%;
   }
   &__foodsTitle {
-    padding: 30px 0px;
+    padding: 30px 0 0;
+  }
+  &__discription {
+  p{
+    width: 30%;
+  }
+  }
+  &__title {
+    margin-top: 20px;
+    border-top: 1px solid #d8d8d8;
+    padding: 20px 0px 0px;
+  }
+  &__notes ul li {
+    font-size: 14px;
   }
 }
 
@@ -31,6 +44,9 @@
   .foodsDetail{
     &__foodsPic {
       margin-right: 0px;
+    }
+    &__title {
+      font-size: 18px;
     }
   }
 }
