--- a/comp/sass/style.scss
+++ b/comp/sass/style.scss
@@ -21,7 +21,7 @@
 @import "second/_workshopDetail";
 @import "second/_foods";
 @import "second/_foodsDetail";
-@import "second/_foodDrinkArea";
+@import "second/_foods";
 @import "second/_attractionDetail";
 @import "second/_goodsArea";
 @import "second/_goodsDetail";
