--- a/comp/sass/second/_attractionDetail.scss
+++ b/comp/sass/second/_attractionDetail.scss
@@ -39,6 +39,7 @@
   &__personDetail {
     margin: auto;
     width: 120px;
+    display: block;
     img {
       border-radius: 50%;
       opacity: 0.9;
