--- a/comp/sass/second/_foodsDetail.scss
+++ b/comp/sass/second/_foodsDetail.scss
@@ -68,6 +68,7 @@
     &__personDetail {
       margin: auto;
       width: 120px;
+      display:block;
       img {
         border-radius: 50%;
         opacity: 0.9;
